add project images and styling

--- a/data/projects.yml
+++ b/data/projects.yml
@@ -10,7 +10,7 @@
     - devicon-heroku-original
     - devicon-javascript-plain
 - title: Thank you, Chef!
-  image:
+  image: tyc-landing.png
   description:
   tech:
   tags:
