fix styling and container sizing

--- a/data/projects.yml
+++ b/data/projects.yml
@@ -11,7 +11,7 @@
     - devicon-javascript-plain
 - title: Thank you, Chef!
   image: tyc-landing.png
-  description:
+  description: Hire your own personal Gordon Ramsay, without the yelling.
   tech:
   tags:
     - devicon-rails-plain-wordmark
