--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,4 +1,5 @@
 - title: BarcSnap!
+  role: Lead Developer
   image: bcs-landing.png
   description: Compare information on Japanese products by scanning their barcodes.
   tech: Leverages the <em>Scandit Barcode Scanner SDK</em> to read barcodes alongside
@@ -9,9 +10,10 @@
     - devicon-postgresql-plain-wordmark
     - devicon-heroku-original
     - devicon-javascript-plain
-  sites: ["https://www.barcsnap.com/", "https://github.com/2tonepantone/barcsnap"]
+  links: ["https://www.barcsnap.com/", "https://github.com/2tonepantone/barcsnap"]
 
 - title: Thank you, Chef!
+  role: Project Manager
   image: tyc-landing.png
   description: Hire your own personal Gordon Ramsay to cook for you, without the yelling.
   tech: Utilizes the <em>Cloudinary API</em> to store avatar and meal course images,
@@ -23,4 +25,4 @@
     - devicon-postgresql-plain-wordmark
     - devicon-heroku-original
     - devicon-javascript-plain
-  sites: ["https://thankyouchef.herokuapp.com/", "https://github.com/2tonepantone/thankyouchef"]
+  links: ["https://thankyouchef.herokuapp.com/", "https://github.com/2tonepantone/thankyouchef"]
