add small width responsiveness

--- a/data/sections.yml
+++ b/data/sections.yml
@@ -3,6 +3,6 @@
                <p>I am an insatiable learner who enjoys the problem-solving
                aspect of programming deeply.</p>
                <p>On a typical weekend, you're most likely to find me on my bike
-               or on a train to a far-out ryokan (that's a traditional Japanese inn).</p>
+               or on a train to a far-out ryokan.</p>
 - title: Projects
   description:
