--- a/data/sections.yml
+++ b/data/sections.yml
@@ -1,8 +1,8 @@
 - title: About
   description: <p>Hi, I'm Kyle. I'm a Full-Stack Web Developer living in Tokyo.</p>
-               <p>I am an insatiable learner who enjoys the problem-solving
-               aspect of programming deeply.</p>
+               <p>I am an insatiable learner who deeply enjoys the problem-solving
+               aspect of programming.</p>
                <p>On a typical weekend, you're most likely to find me on my bike
-               or on a train to a far-out ryokan.</p>
+               or on a train to a far-flung ryokan.</p>
 - title: Projects
   description:
