update og description

--- a/data/meta_tags.yml
+++ b/data/meta_tags.yml
@@ -1,5 +1,6 @@
 og:
   project_name: "Kyle Alexander Bailey - Web Developer"
   title: "Kyle Alexander Bailey - Web Developer"
-  description: "A glimpse into what I'm up to"
+  description: "Get a glimpse into what I'm up to—find out a little bit about me
+                and take a look at my projects, both old and new."
   image: "og_image.png"
