feat: update job title to "Full-Stack Engineer"

--- a/data/sections.yml
+++ b/data/sections.yml
@@ -1,5 +1,5 @@
 - title: About
-  description: Hi, I'm Kyle. I'm a Software Engineer living in Tokyo.
+  description: Hi, I'm Kyle. I'm a Full-Stack Engineer living in Tokyo.
     <p>I am an insatiable learner who deeply enjoys the problem-solving
     aspect of programming.</p>
     <p>On a typical weekend, you're most likely to find me on my bike
