--- a/data/meta_tags.yml
+++ b/data/meta_tags.yml
@@ -1,6 +1,6 @@
 og:
-  project_name: Kyle Alexander Bailey | Software Engineer
-  title: Kyle Alexander Bailey | Software Engineer
+  project_name: Kyle Alexander Bailey | Full-Stack Engineer
+  title: Kyle Alexander Bailey | Full-Stack Engineer
   description: Get a glimpse into what I'm up to—find out a little bit about me
     and take a look at my personal and professional projects, both old and new.
-  image: og_image_v2.png
+  image: og_image_v3.png
