fix: update Macy's event site URL

--- a/data/professional_projects.yml
+++ b/data/professional_projects.yml
@@ -39,7 +39,7 @@
     [
       {
         title: "Event Site",
-        url: "https://www.macys.com/s/holiday-celebrations/santaland-at-home/?lid=holidaycelebrations-cta_santalandathome&cache=1696829082189",
+        url: "https://www.macys.com/s/holiday-celebrations/",
         icon: "fas fa-bullhorn",
       },
     ]
